...
  }

  @override
  Widget build(BuildContext context) {
    return Semantics(
      button: true,
      label: 'Upload',
      excludeSemantics: true,
      onTap: _onPressed,
      child: GestureDetector(
        onTap: _onPressed,
        child: SizedBox(
          width: 56,
...
