...
    setState(() {});
  }

  @override
  void initState() {
    Provider.of<TabProvider>(context, listen: false)
        .updateSelectedTab("Wallpapers");
    checkConnection();
    super.initState();
  }

  void initDynamicLinks(BuildContext context) async {
    final PendingDynamicLinkData data =
...
