...
        ),
        body: BottomBar(
          child: PageView.builder(
              onPageChanged: (index) {
                if (index == 0) {
                  Provider.of<CategoryProvider>(context, listen: false)
                      .updateSelectedCategory("Home");
                } else if (index == 1) {
                  Provider.of<CategoryProvider>(context, listen: false)
                      .updateSelectedCategory("Curated");
                } else if (index == 2) {
                  Provider.of<CategoryProvider>(context, listen: false)
                      .updateSelectedCategory("Abstract");
...
