...
      },
      child: Scaffold(
          backgroundColor: Theme.of(context).primaryColor,
          appBar: const PreferredSize(
            preferredSize: Size(double.infinity, 55),
            child: HeadingChipBar(
              current: "Settings",
            ),
          ),
          body: ListView(children: <Widget>[
            if (globals.prismUser.premium == true)
              Container()
            else
...
            // ListTile(
            //   onTap: () {
            //     Navigator.pushNamed(context, themeViewRoute);
            //   },
            //   leading: const Icon(JamIcons.wrench),
            //   title: Text(
            //     "Themes",
            //     style: TextStyle(
            //         color: Theme.of(context).accentColor,
            //         fontWeight: FontWeight.w500,
            //         fontFamily: "Proxima Nova"),
            //   ),
            //   subtitle: const Text(
...
            // ),
            ListTile(
                leading: const Icon(
                  JamIcons.pie_chart_alt,
                ),
                title: Text(
                  "Clear Cache",
                  style: TextStyle(
                      color: Theme.of(context).colorScheme.secondary,
                      fontWeight: FontWeight.w500,
                      fontFamily: "Proxima Nova"),
                ),
                subtitle: const Text(
...
                  PaintingBinding.instance.imageCache.clear();
                  await Hive.box<InAppNotif>('inAppNotifs').deleteFromDisk();
                  await Hive.openBox<InAppNotif>('inAppNotifs');
                  main.prefs.delete('lastFetchTime');
                  await Hive.box('setups').deleteFromDisk();
                  await Hive.openBox('setups');
                  toasts.codeSend("Cleared cache!");
                }),
            // SwitchListTile(
            //     activeColor: Theme.of(context).errorColor,
            //     secondary: const Icon(
            //       JamIcons.dashboard,
            //     ),
...
                                      onPressed: () {
                                        Navigator.of(context).pop();
                                        toasts.error("Cleared all favourite wallpapers!");
                                        context.favouriteWallsLegacyProvider(listen: false).deleteData();
                                      },
                                      child: Text(
                                        'YES',
                                        style: TextStyle(
                                          fontSize: 16.0,
                                          color: Theme.of(context).colorScheme.error,
                                        ),
                                      ),
                                    ),
...
                                        shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(5)),
                                        color: Theme.of(context).colorScheme.error,
                                        onPressed: () {
                                          Navigator.of(context).pop();
                                        },
                                        child: const Text(
                                          'NO',
                                          style: TextStyle(
                                            fontSize: 16.0,
                                            color: Colors.white,
                                          ),
                                        ),
                                      ),
...
