...
        main.prefs.getBool("isLoggedin")
            ? ListTile(
                leading: Icon(
                  JamIcons.database,
                ),
                title: new Text(
                  "Clear Downloads",
                  style: TextStyle(
                      color: Theme.of(context).accentColor,
                      fontWeight: FontWeight.w500,
                      fontFamily: "Proxima Nova"),
                ),
                subtitle: Text(
...
